<resources>
    <string name="app_name">RoadAssist</string>
    <string name="Theme_App">Theme.AppCompat.Light</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_stats2">Stats2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_menuNav">Options Menu</string>
    <string name="title_activity_statisticssimple">Statistics Simple View</string>
    <string name="title_activity_listviewloader">List View Loader</string>
    <string name="hello_world">Hello world!</string>
    <string name="google_maps_api_key">AIzaSyD2ZMRZqhQtMtqvIZS37-BlkYIk_U-8bBU</string>
    <string name="google_maps_api_key_browser">AIzaSyDP44XNtbKmVlSxIKLpNqW5HO0PGqsydHI</string>
    // Per's Key that worked AIzaSyDmyRa6BHGsxhlraBZikucctYEAt_7yioY

    <!-- activity_help -->
    <string name="HelpInfo">This application is designed to help truck drivers find stops along a
        pre defined road without unnecessary manual input.
        \n\nStart a new route by pressing plan route in the main window. Add a destination or several.
        \n\nWhen the map with navigation is visible press on the screen to bring up options for rest stops.</string>
    <string name="title_activity_help">Help</string>

    <!-- activity_about -->
    <string name="AboutInfo">This application was created as a project for the SE&amp;M program on
        Gothenburg University to promote safe driving among truck drivers. This is a first year project.  </string>
    <string name="title_activity_about">About</string>

    <!-- activity_detailedstats -->
    <string name="title_activity_detailedstats">Detailed Statistics</string>

    <!-- activity_main_actions -->
    <string name="action_search">Search</string>
    <string name="action_map">View Map</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Log Out</string>

    <!-- menunav_layout -->
    <string name="restaurantButton">Find Restaurant</string>
    <string name="parkButton">Find Parking</string>
    <string name="gasButton">Find Gas Station</string>
    <string name="mainmenuButton">Exit to Main Menu</string>
    <string name="endTripButton">End Current Route</string>

    <!-- login_activity -->
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="Login">Login</string>
    <string name="signUp">Sign Up</string>

    <!-- main_activity -->
    <string name="resumeRoute">Resume Route</string>
    <string name="planRoute">Plan Route</string>
    <string name="statistics">Statistics</string>


</resources>
