<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="match_parent"
    android:columnCount="5"
    android:rowCount="7"
    android:useDefaultMargins="true"
    android:background="@drawable/darkwoodbkgr"
    android:animationCache="false">

    <Button
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:background="@drawable/closeicon"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonClose"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|top"
        android:text=""
        android:nextFocusLeft="@+id/ButtonGas"
        android:nextFocusDown="@+id/ButtonRestaurant"></Button>

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="@drawable/food"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonRestaurant"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_alignTop="@+id/ButtonParking"
        android:layout_toStartOf="@+id/ButtonClose"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="120dp"
        android:gravity="bottom|center"
        android:text="@string/restaurantButton"
        android:nextFocusUp="@+id/ButtonClose"
        android:nextFocusLeft="@+id/ButtonGas"
        android:nextFocusDown="@+id/ButtonMainMenu"></Button>

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="@drawable/gas"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonGas"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_alignStart="@+id/ButtonParking"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="120dp"
        android:gravity="bottom|center"
        android:text="@string/gasButton"
        android:nextFocusUp="@+id/ButtonClose"
        android:nextFocusRight="@+id/ButtonRestaurant"
        android:nextFocusDown="@+id/ButtonParking"></Button>

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="@drawable/mainmenu"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonMainMenu"
        android:layout_gravity="right|bottom"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/mainmenu"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="10dp"
        android:gravity="bottom|center"
        android:text="@string/mainmenuButton"
        android:nextFocusLeft="@+id/ButtonParking"
        android:nextFocusUp="@+id/ButtonRestaurant"></Button>

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:background="@drawable/park"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonParking"
        android:layout_column="0"
        android:adjustViewBounds="false"
        android:layout_below="@+id/ButtonClose"
        android:layout_alignParentStart="true"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="-20dp"
        android:gravity="bottom|center"
        android:text="@string/parkButton"
        android:nextFocusUp="@+id/gButtonGas"
        android:nextFocusRight="@+id/ButtonMainMenu"
        android:layout_marginRight="10dp"></Button>

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:gravity="bottom|center"
        android:text="@string/endTripButton"
        android:id="@+id/ButtonEndTrip"
        android:layout_gravity="left|bottom"
        android:background="@drawable/stoproute"
        android:layout_marginBottom="35dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:gravity="bottom|center"
        android:text="@string/resumeRoute"
        android:id="@+id/ButtonMenuResRoute"
        android:layout_gravity="left|center_vertical"
        android:background="@drawable/resumeroute"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="-20dp"
        android:textColor="#FFFFFF" />


</FrameLayout>