<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_road"
    tools:context="com.example.per.ras_test.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/roadassistlogo"
        android:contentDescription="logo"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_marginBottom="262dp"
        android:layout_alignParentStart="false"
        android:layout_marginTop="-100dp" />


    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:background="@drawable/searchmap"
            android:id="@+id/plnRtBtn"
            android:onClick="click"
            android:gravity="bottom|center"
            android:text="@string/planRoute"
            android:layout_row="12"
            android:layout_column="0" />

        <Button
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:gravity="bottom|center"
            android:text="@string/statistics"
            android:background="@drawable/diagrambtn"
            android:id="@+id/statsBtn"
            android:layout_row="13"
            android:layout_column="0" />

        <Button
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:gravity="bottom|center"
            android:text="@string/resumeRoute"
            android:background="@drawable/resumeroute"
            android:id="@+id/vwRtBtn"
            android:layout_row="13"
            android:layout_column="3" />

    </GridLayout>

</RelativeLayout>
